<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mamcet.electricalcircuitcalculator.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarThumbVertical="@null">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Row 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/formula"
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/primary_blue"
                    android:drawableTop="@drawable/formula"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/formula"
                    android:textAllCaps="false"
                    android:letterSpacing="0.01"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle">


                </Button>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:textAlignment="center"
                    android:drawableTop="@drawable/current"
                    android:text="@string/current_in_parallel_circuit"
                    android:letterSpacing="0.01"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle">

                </Button>


            </LinearLayout>

            <!-- Row 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp">


                <Button
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:textAlignment="center"
                    android:drawableTop="@drawable/volatge"
                    android:text="@string/voltage_in_series_circuit"
                    android:letterSpacing="0.01"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle">

                </Button>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:drawableTop="@drawable/resistance"
                    android:text="@string/resistance_calculation"
                    android:letterSpacing="0.01"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle">



                </Button>


            </LinearLayout>

            <!-- Row 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="280dp">


                <Button
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:drawableTop="@drawable/ohms"
                    android:text="@string/ohms_law"
                    android:letterSpacing="0.01"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle">
                </Button>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:drawableTop="@drawable/parallel"
                    android:text="@string/parallel_resistors"
                    android:letterSpacing="0.01"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle">

                </Button>


            </LinearLayout>

            <!-- Row 4 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="420dp">


                <Button
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:drawableTop="@drawable/resistor"
                    android:text="@string/series_resistor"
                    android:letterSpacing="0.01"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle">
                </Button>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:drawableTop="@drawable/capacitor"
                    android:text="@string/series_capacitor"
                    android:letterSpacing="0.01"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle">
                </Button>

            </LinearLayout>

            <!-- Row 5 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="560dp"
                android:layout_marginBottom="30dp">


                <Button
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:drawableTop="@drawable/pcapacitor"
                    android:text="@string/parallel_capacitor"
                    android:letterSpacing="0.01"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle">
                </Button>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:drawableTop="@drawable/transformer"
                    android:text="@string/transformer"
                    android:letterSpacing="0.01"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle,RtlHardcoded">

                </Button>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>